samples/_failures_safe/1761165397_d4d785_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b7f55df.c: In function ‘main’:
./samples/SAFE/__tmp_8b7f55df.c:158:5: error: expected expression at end of input
  158 |     read_matrix(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_8b7f55df.c:158:5: error: expected declaration or statement at end of input
